--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,12 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
     <title>React App</title>
+    <!-- MUI -->
+    <link
+  rel="stylesheet"
+  href="https://fonts.googleapis.com/icon?family=Material+Icons"
+/>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
